--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ celerybeat.pid
 
 # Environments
 .env
+frontend/.env
 .venv
 env/
 venv/
@@ -172,12 +173,18 @@ cython_debug/
 
 # Node
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # IDEs
 .vscode/
 .idea/
+
+# Frontend
+frontend/node_modules/
+frontend/build/
+frontend/.cache/
+frontend/dist/
 
 
