--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ FLASK_APP=app.py
 FLASK_ENV=production
 STRIPE_PUBLISHABLE_KEY=<YOUR_PUBLIC_KEY>
 STRIPE_SECRET_KEY=<YOUR_SECRET_KEY>
+REDDIT_CLIENT_ID=<YOUR_PUBLIC_KEY>
+REDDIT_CLIENT_SECRET=<YOUR_SECRET_KEY>
