working stream of new SaaS ideas

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ STRIPE_PUBLISHABLE_KEY=<YOUR_PUBLIC_KEY>
 STRIPE_SECRET_KEY=<YOUR_SECRET_KEY>
 REDDIT_CLIENT_ID=<YOUR_PUBLIC_KEY>
 REDDIT_CLIENT_SECRET=<YOUR_SECRET_KEY>
+REDDIT_USER_AGENT=<YOUR_REDDIT_USER_AGENT>
+OPENAI_API_KEY=<YOUR_OPENAI_KEY>
