now including google ads metrics for each product - still waiting on api access

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 FLASK_APP=app.py
 FLASK_ENV=production
-STRIPE_PUBLISHABLE_KEY=<YOUR_PUBLIC_KEY>
-STRIPE_SECRET_KEY=<YOUR_SECRET_KEY>
-REDDIT_CLIENT_ID=<YOUR_PUBLIC_KEY>
-REDDIT_CLIENT_SECRET=<YOUR_SECRET_KEY>
+STRIPE_PUBLISHABLE_KEY=<YOUR_STRIPE_PUBLISHABLE_KEY>
+STRIPE_SECRET_KEY=<YOUR_STRIPE_SECRET_KEY>
+REDDIT_CLIENT_ID=<YOUR_REDDIT_CLIENT_ID>
+REDDIT_CLIENT_SECRET=<YOUR_REDDIT_CLIENT_SECRET>
 REDDIT_USER_AGENT=<YOUR_REDDIT_USER_AGENT>
-OPENAI_API_KEY=<YOUR_OPENAI_KEY>
+OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
+GOOGLE_ADS_DEVELOPER_TOKEN=<YOUR_GOOGLE_ADS_DEVELOPER_TOKEN>
+GOOGLE_ADS_CUSTOMER_ID=<YOUR_GOOGLE_ADS_CUSTOMER_ID>
