hooked up to google ads api through DataForSEO

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ REDDIT_CLIENT_ID=<YOUR_REDDIT_CLIENT_ID>
 REDDIT_CLIENT_SECRET=<YOUR_REDDIT_CLIENT_SECRET>
 REDDIT_USER_AGENT=<YOUR_REDDIT_USER_AGENT>
 OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
-GOOGLE_ADS_DEVELOPER_TOKEN=<YOUR_GOOGLE_ADS_DEVELOPER_TOKEN>
-GOOGLE_ADS_CUSTOMER_ID=<YOUR_GOOGLE_ADS_CUSTOMER_ID>
+DATAFORSEO_USERNAME=<YOUR_DATAFORSEO_USERNAME>
+DATAFORSEO_PASSWORD=<YOUR_DATAFORSEO_PASSWORD>
