Update gui and ideas list

--- a/data/SaaS_ideas.json
+++ b/data/SaaS_ideas.json
@@ -1,3 +1,170 @@
 [
-    
+  {
+    "product_title": "Ad-Free Streaming Assistant",
+    "description": "A browser extension that intelligently manages and skips ads while streaming video content. Targeted at gamers and binge-watchers, it reduces interruption by using user-defined criteria to automatically skip ads, ensuring a seamless viewing experience across platforms like YouTube.",
+    "keywords": [
+      "ad blocker",
+      "streaming",
+      "video content"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Regulatory Compliance Voice",
+    "description": "An AI-driven advisory tool for businesses to navigate advertising regulations and claims. It helps companies draft compliant marketing materials by analyzing statements according to FTC and Lanham Act guidelines, with real-time feedback and examples of potential legal pitfalls.",
+    "keywords": [
+      "advertising compliance",
+      "legal advice",
+      "marketing regulations"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Sales-AI Personal Shopper",
+    "description": "An AI-powered chatbot that integrates seamlessly with e-commerce platforms like Shopify, providing personalized shopping assistance and product recommendations based on customer behavior and historical data. It engages customers, answers queries, and suggests additional products to increase average order value.",
+    "keywords": [
+      "e-commerce",
+      "AI chatbot",
+      "personalized shopping"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Job Evolution Forecast Platform",
+    "description": "A SaaS platform that provides detailed predictions and analysis of job market trends over the next decades, focusing on automation and AI impact. It aggregates expert insights and industry data to help businesses and individuals prepare for upcoming employment shifts and skill requirements.",
+    "keywords": [
+      "job market analysis",
+      "future of work",
+      "AI impact"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "HyperInflation Tracker",
+    "description": "A financial SaaS tool designed to help users track inflation rates, monitor economic indicators, and manage personal finances effectively in hyperinflationary environments. This platform offers predictive analytics for consumers and businesses, helping them prepare for potential economic downturns. Targeted at individuals and small businesses, it aims to provide actionable insights and strategies to maintain financial health during turbulent times.",
+    "keywords": [
+      "inflation monitoring",
+      "personal finance",
+      "economic indicators"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Startup CoFounder Connector",
+    "description": "An innovative platform that connects entrepreneurs with potential co-founders, mentors, and investors based on complementary skills, goals, and industry experience. It uses AI to match users and facilitate networking opportunities, helping streamline the startup formation process. This product targets early-stage entrepreneurs in need of collaboration and support to grow their ideas into viable businesses.",
+    "keywords": [
+      "startup networking",
+      "co-founder matching",
+      "entrepreneurship"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Post-Apocalyptic Simulation Game",
+    "description": "A unique gaming SaaS that offers players a chance to experience and navigate a simulated post-apocalyptic world. Players must strategize on resource management, survival skills, and community-building to thrive in a harsh, competitive environment. The game emphasizes social interactions and decision-making challenges, catering to gamers who enjoy survival themes and cooperative gameplay.",
+    "keywords": [
+      "survival game",
+      "strategy simulation",
+      "community building"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Virtual Martial Arts Academy",
+    "description": "A comprehensive online platform offering martial arts classes taught by experienced instructors through a library of high-quality video tutorials. Users can engage in fitness-focused classes, track their progress, and receive feedback through community interactions and live Q&A sessions. Ideal for fitness enthusiasts looking to learn martial arts from home.",
+    "keywords": [
+      "martial arts",
+      "fitness classes",
+      "online learning"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Interactive Knowledge Sharing Platform",
+    "description": "A platform designed for individuals to share personal experiences, insights, and tips related to career challenges and financial negotiations. Users can upload and interact with content that highlights success stories, salary negotiations, and professional growth strategies, enhancing community learning and peer support.",
+    "keywords": [
+      "career advice",
+      "community learning",
+      "salary negotiations"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Boot Device Troubleshooter",
+    "description": "A self-service SaaS tool for diagnosing and resolving common boot device issues in computers and laptops. Users can follow guided troubleshooting steps, access a community forum for shared solutions, and receive real-time support to help them fix boot failures and restore functionality, targeted at tech-savvy individuals and small business owners.",
+    "keywords": [
+      "tech support",
+      "boot issues",
+      "IT troubleshooting"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Inclusive Learning Platform",
+    "description": "An educational SaaS platform that provides tailored resources and mentorship for students from diverse backgrounds, especially those on disability or facing financial constraints. The platform connects users with mentors who share similar experiences and offers a range of adaptive courses designed to enhance skills in high-demand areas such as programming, AI, and entrepreneurship. By focusing on inclusivity and community engagement, it aims to empower students to achieve their academic and career goals.",
+    "keywords": [
+      "education",
+      "mentorship",
+      "inclusivity"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Skill Assessment Navigator",
+    "description": "A comprehensive online tool that helps job seekers, particularly in the tech industry, to prepare for programming tests and interviews. This platform offers personalized skill assessments based on real interview questions, coding challenges, and feedback from industry professionals. Additionally, it provides resources for improving reading comprehension and critical analysis, ensuring that users are fully equipped to navigate complex job applications and interviews in a merit-based environment.",
+    "keywords": [
+      "job preparation",
+      "skill assessment",
+      "programming"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "Community-Driven Product Feedback System",
+    "description": "A SaaS solution designed for entrepreneurs who are striving to build products based on community feedback and engagement. This platform allows users to share their products, gather real-time feedback, and interact with potential customers. Entrepreneurs can utilize insights gained from the community to refine their offerings, create meaningful contributions, and ultimately build a loyal customer base. The service emphasizes value creation over profit, aligning with the ideals of giving back and growing through community support.",
+    "keywords": [
+      "community engagement",
+      "product feedback",
+      "entrepreneurship"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  },
+  {
+    "product_title": "College Networking Hub",
+    "description": "A dedicated networking platform for students and alumni from top colleges to connect, share resources, and collaborate on projects. This hub focuses on enhancing career opportunities through a robust alumni network, allowing users to seek mentorship, internships, and job openings in their fields of interest, such as computer science and entrepreneurship. The service helps students realize the importance of a strong college network and facilitates the creation of valuable professional connections.",
+    "keywords": [
+      "networking",
+      "career opportunities",
+      "college"
+    ],
+    "avg_monthly_searches": null,
+    "competition_level": null,
+    "revenue": null
+  }
 ]
