--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@stripe/react-stripe-js": "^3.3.0",
-    "@stripe/stripe-js": "^5.8.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.17"
+    "@stripe/react-stripe-js": "2.4.0",
+    "@stripe/stripe-js": "2.2.0",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "3.3.5"
   },
   "browserslist": {
     "production": [
@@ -33,7 +33,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "7.0.3"
   },
   "description": ""
 }
