--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@stripe/react-stripe-js": "2.4.0",
     "@stripe/stripe-js": "2.2.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "autoprefixer": "10.4.16",
     "postcss": "8.4.31",
     "react": "18.2.0",
