--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,6 @@ python-dotenv==1.0.1
 stripe==8.4.0
 praw==7.8.1
 openai==1.65.5
-google-ads==26.0.0
+requests==2.31.0
 urllib3==1.26.15
 gunicorn==21.2.0
