--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,10 @@ services:
     startCommand: gunicorn backend.app:app
     healthCheckPath: /api/health
     autoDeploy: true
+    disk:
+      name: data-storage
+      mountPath: /data
+      sizeGB: 1
     envVars:
       - key: OPENAI_API_KEY
         sync: false
@@ -26,6 +30,8 @@ services:
         sync: false
       - key: NODE_ENV
         value: production
+      - key: FRONTEND_URL
+        value: https://saas-insight-engine-frontend.onrender.com
 
   - type: web
     name: saas-insight-engine-frontend
@@ -38,6 +44,6 @@ services:
       - key: REACT_APP_STRIPE_PUBLISHABLE_KEY
         sync: false
       - key: REACT_APP_API_URL
-        sync: false
+        value: https://saas-insight-engine-backend.onrender.com
       - key: NODE_ENV
         value: production 
