--- a/render.yaml
+++ b/render.yaml
@@ -36,7 +36,7 @@ services:
   - type: web
     name: saas-insight-engine-frontend
     env: static
-    plan: starter
+    plan: free
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/build
     autoDeploy: true
