--- a/render.yaml
+++ b/render.yaml
@@ -33,10 +33,9 @@ services:
       - key: FRONTEND_URL
         value: https://saas-insight-engine-frontend.onrender.com
 
-  - type: web
+  - type: static
     name: saas-insight-engine-frontend
     env: static
-    plan: free
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/build
     autoDeploy: true
