--- a/render.yaml
+++ b/render.yaml
@@ -32,6 +32,8 @@ services:
         value: production
       - key: FRONTEND_URL
         value: https://saas-insight-engine-frontend.onrender.com
+      - key: ADDITIONAL_CORS_ORIGINS
+        value: https://saas-engine.com
 
   - type: web
     name: saas-insight-engine-frontend
