Enhance authentication and payment features: Added JWT authentication, password reset functionality, and email configuration. Updated .env.example and README for new environment variables. Improved user registration and login flow with Stripe integration. Added rate limiting for sensitive endpoints.

--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,17 @@ OPENAI_API_KEY=<YOUR_OPENAI_API_KEY>
 DATAFORSEO_USERNAME=<YOUR_DATAFORSEO_USERNAME>
 DATAFORSEO_PASSWORD=<YOUR_DATAFORSEO_PASSWORD>
 
+# JWT Configuration
+JWT_SECRET_KEY=<YOUR_SECURE_RANDOM_JWT_SECRET_KEY> # Generate with: openssl rand -hex 32
+
+# Email Configuration (e.g., for Gmail)
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USERNAME=<YOUR_EMAIL@GMAIL.COM>
+MAIL_PASSWORD=<YOUR_GMAIL_APP_PASSWORD> # Use an App Password if 2FA is enabled
+MAIL_DEFAULT_SENDER=<YOUR_EMAIL@GMAIL.COM>
+
 # For production deployment
 # FRONTEND_URL=https://your-frontend-url.onrender.com
+# ADDITIONAL_CORS_ORIGINS=https://your-other-domain.com
