--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ openai==1.65.5
 requests==2.31.0
 urllib3==1.26.15
 gunicorn==21.2.0
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
+Flask-Mail==0.10.0
+Flask-Limiter==3.12
