--- a/render.yaml
+++ b/render.yaml
@@ -28,6 +28,20 @@ services:
         sync: false
       - key: STRIPE_WEBHOOK_SECRET
         sync: false
+      - key: JWT_SECRET_KEY
+        sync: false
+      - key: MAIL_SERVER
+        sync: false
+      - key: MAIL_PORT
+        sync: false
+      - key: MAIL_USE_TLS
+        sync: false
+      - key: MAIL_USERNAME
+        sync: false
+      - key: MAIL_PASSWORD
+        sync: false
+      - key: MAIL_DEFAULT_SENDER
+        sync: false
       - key: NODE_ENV
         value: production
       - key: FRONTEND_URL
@@ -63,4 +77,4 @@ services:
       - key: REACT_APP_API_URL
         value: https://saas-insight-engine-backend.onrender.com
       - key: NODE_ENV
-        value: production 
+        value: production
