--- a/render.yaml
+++ b/render.yaml
@@ -55,6 +55,9 @@ services:
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/build
     autoDeploy: true
+    rewrites:
+      - source: /*
+        destination: /index.html
     headers:
       - path: /*
         name: Cache-Control
