--- a/render.yaml
+++ b/render.yaml
@@ -55,8 +55,9 @@ services:
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/build
     autoDeploy: true
-    rewrites:
-      - source: /*
+    routes:
+      - type: rewrite
+        source: /*
         destination: /index.html
     headers:
       - path: /*
